syntax = "proto3";
package io.hbt.bubblegum.core.kademlia.protobuf;

message KademliaFindNodeRequest {
    string searchHash = 1;
    int32 numberRequested = 2;
}